--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/bun": "latest",
+    "jsdom": "^28.0.0",
     "tailwindcss": "3.4.17"
   }
 }
